Text and figure tweaks for Figure 3.

--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -194,7 +194,9 @@ When the detection of GW150914 was first announced, many were surprised that it 
 
 \textbf{But the black holes' parent stars can't get so close.} Stars expand as they evolve. Even our Sun will reach \ilya{roughly} an astronomical unit in size during its giant phase; the stars (above 20 solar masses at birth) that leave behind black holes may reach thousands of solar radii at their maximal extent. Maximum stellar radius as a function of initial mass is plotted in \autoref{fig:Rmax}. We appear to have a problem. If the parent stars begin life at separations from which gravitational waves could bring their remnants together, the stars will expand to sizes larger than their separation as they evolve, and will therefore merge long before they collapse into black holes. If they start sufficiently far apart to avoid merger before collapse, their remnant binaries will take many millions of times the age of the universe to merge. In either case, no gravitational-wave sources would exist today. 
 
-\textbf{And the problem is even worse for neutron stars.} Because the gravitational-wave merger timescale is inversely proportional to the cube of the masses, double neutron stars must be separated by less than 5 solar radii to merge within the age of the Universe. The stars (\ilya{approximately} 8 to 20 solar masses at birth) that produce neutron stars also expand greatly during their evolution. But even \textit{at birth}, the neutron stars' progenitors could not fit into a binary of the required size.  
+\ilya{\textbf{The problem is there at birth.} In fact, for reasonable models of wind-driven mass loss and mass loss during supernova, even initial stellar radii at the start of the main sequence are too large to fit into a binary that could merge within the age of the Universe just through gravitational-wave emission.  The black 'Roche lobe' curve in \autoref{fig:Rmax} shows the maximum size that a star could have in order to fit into a circular, merging equal-mass binary (see \autoref{fig:periapsis}).  This is smaller than the zero-age main sequence radius, so the problem is there even without accounting for stellar radial expansion or binary widening through mass loss, which would exacerbate the problem.}
+
+%Because the gravitational-wave merger timescale is inversely proportional to the cube of the masses, double neutron stars must be separated by less than 5 solar radii to merge within the age of the Universe. The stars (\ilya{approximately} 8 to 20 solar masses at birth) that produce neutron stars also expand greatly during their evolution. But even \textit{at birth}, the neutron stars' progenitors could not fit into a binary of the required size.  
  
 \begin{figure}
 	\centering
@@ -205,8 +207,8 @@ When the detection of GW150914 was first announced, many were surprised that it 
 	
 \begin{figure}
 	\centering	
-	\includegraphics[width=0.45\textwidth]{StellarRadiusZsolarRoche.png}
-\caption{Maximal stellar extent at solar metallicity during various phases of stellar evolution for a non-rotating star with a given initial mass; based on the COMPAS implementation of single stellar evolution models of \citet{Hurley:2000}.   \ilya{The star expands from its zero-age main sequence (ZAMS) size onwards through the main sequence, Hertzsprung gap, and core Helium burning stages (and the asymptotic giant branch for lower-mass stars).  The Roche lobe radius (maximal stellar size beyond which a star would engage in mass transfer) is plotted for an equal mass circular binary which would have the maximum separation to allow a merger within the age of the Universe (see \autoref{fig:periapsis}) assuming initial mass to compact object mass conversion as in \autoref{fig:BHremnant}.}\label{fig:Rmax} }
+	\includegraphics[width=0.9\textwidth]{StellarRadiusZsolarRoche.png}
+\caption{Maximal stellar extent at solar metallicity during various phases of stellar evolution for a non-rotating star with a given initial mass; based on the COMPAS implementation of single stellar evolution models of \citet{Hurley:2000}.   \ilya{The star expands from its zero-age main sequence (ZAMS) size onwards through the main sequence (MS), Hertzsprung gap (HG), core Helium burning (CHeB) stages, and the asymptotic giant branch (AGB) for lower-mass stars.  The Roche lobe radius (maximal stellar size beyond which a star would engage in mass transfer \citep{Eggleton:1983}) is plotted for an equal mass circular binary which would have the maximum separation to allow a merger within the age of the Universe (see \autoref{fig:periapsis}) assuming initial mass to compact object mass conversion as in \autoref{fig:BHremnant}.}\label{fig:Rmax} }
 \end{figure}
 
 %\todo{Update left panel of plot to show periapsis on horizontal axis.  Take max radial extent plot from Simon?}
