LIGO -> gravitational-wave

--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -140,7 +140,7 @@ GW170814\footnote{\citet{GW170814}} & $24.1^{+1.4}_{-1.1}$ & &$30.5^{+5.7}_{-3.0
 
 \textbf{Distances:} All signals came from distances of around 500 Mpc to 1 Gpc (redshifts $z\sim 0.1$ -- $0.2$).  With just two operational detectors, LIGO Hanford and LIGO Livingston, for all events prior to GW170814, sources could only be localised to 90\% credible regions spanning hundreds to more than a thousand square degrees on the sky.  The participation of the Virgo instrument in the observation of GW170608 reduced the sky region to only 60 deg$^2$ \ilya{\citep{GW170608}}.  Nonetheless, associations with specific host galaxies are impossible for all binary black hole mergers.  
 
-\textbf{Testing General Relativity:} All LIGO signals observed to date are consistent with gravitational waves expected within the general theory of relativity, providing a stringent test of this theory in the dynamical, strong-field regime \citep{GW150914:GR}.
+\textbf{Testing General Relativity:} All gravitational-wave signals observed to date are consistent with gravitational waves expected within the general theory of relativity, providing a stringent test of this theory in the dynamical, strong-field regime \citep{GW150914:GR}.
 
 \subsection{Electromagnetic observations}
 
@@ -178,7 +178,7 @@ Black-hole X-ray binaries with dynamical mass measurements provide the only othe
 \textbf{Black Hole Spin Magnitudes:} Black hole X-ray binaries also provide an opportunity for measuring black hole spins \citep[see][for a recent review]{MillerMiller:2015}.  Continuum fitting of the X-ray flux from the disk and iron K-$\alpha$ line fits to the disk reflection profile can both be used to infer the location of the inner edge of the disk, assumed to correspond to the radius of the innermost stable circular orbit, which is a sensitive function of black hole spin.  Quasi-periodic oscillations also have the potential to provide spin measurements.  Unfortunately, the underlying physical mechanisms are not fully understood at present, and the models can suffer from significant systematics.  For example, \ilya{out of six} systems for which both disk continuum and disk reflection spin measurements are available, the two methods are inconsistent at the $3$ or $5$ sigma level \ilya{for two systems}, and for one system the statistical uncertainty is so large as to span nearly the full allowed range from $0$ to $1$.  However, for the remaining \ilya{three} systems with both measurements available, both methods yield spins $\chi \gtrsim 0.9$.  
 
 \textbf{Inconsistency with Spin Observations from GW Sources?} Most relevantly, these high-spin observations include two high-mass X-ray binaries: LMC X-1 and Cygnus X-1.  This is significant, because unlike long-lived low-mass X-ray binaries, whose spin magnitudes could be altered by accretion from the companion, especially if they started out with intermediate-mass companions \citep{Podsiadlowski:2003,Fragos:2015}, high-mass X-ray binaries are too short-lived to enable significant spin changes due to accretion \citep{KingKolb:1999}.  %Moreover, such high-mass X-ray binaries may be direct progenitors of merging binary black holes \citep{Bulik:2008,CygnusX3:2012}; in fact, 
-Isolated binaries that form binary black holes must go through the high-mass X-ray binary phase during their evolution.  Thus, if the high spin magnitude measurements in black-hole X-ray binaries are to be believed, at least some stellar-mass black holes in systems similar to those that could go on to become merging black holes should have high spins.  However, there may be significant differences in the evolutionary channels and environments of the locally observed high-mass X-ray binaries and the LIGO-observed binary black holes \citep{HotokezakaPiran:2017}.  Moreover, the spin magnitude measurements \ilya{in X-ray binaries} could be very sensitive to the modelling assumptions, and the systematic errors may dominated the claimed statistical ones \citep[e.g.,][]{Basak:2017,Kawano:2017}.
+Isolated binaries that form binary black holes must go through the high-mass X-ray binary phase during their evolution.  Thus, if the high spin magnitude measurements in black-hole X-ray binaries are to be believed, at least some stellar-mass black holes in systems similar to those that could go on to become merging black holes should have high spins.  However, there may be significant differences in the evolutionary channels and environments of the locally observed high-mass X-ray binaries and the binary black holes \ilya{observed in gravitational waves} \citep{HotokezakaPiran:2017}.  Moreover, the spin magnitude measurements \ilya{in X-ray binaries} could be very sensitive to the modelling assumptions, and the systematic errors may dominated the claimed statistical ones \citep[e.g.,][]{Basak:2017,Kawano:2017}.
 
 \textbf{Black Hole Spin Directions:} We know even less about the spin directions than the spin magnitudes.  Although black-hole spin-orbit alignment is assumed in continuum flux measurements \citep{MillerMiller:2015}, some black-hole X-ray binaries, including GRO J1655-40 \citep{Martin:2008}, 4U 1543-47 \citep{MorningstarMiller:2014} and particularly V4641 Sgr \citep{Orosz:2001,Martin:2008b} appear to indicate that the microquasar jet, presumably aligned with the BH spin axis, is misaligned with the orbit.  Moreover, initial stellar spins in massive binaries have been observed to be misaligned \citep[e.g.,][]{Albrecht:2009,Albrecht:2014}, though there are opportunities for realignment during binary evolution, as described below.
 
@@ -238,7 +238,7 @@ Of course, this relatively simple picture holds many uncertainties: the rate of 
 
 What if some types of massive stars did not expand? A massive binary could then start out at an orbital period of a couple of days, close enough that if the stars produced black holes in situ they would merge within the age of the Universe through gravitational-wave emission. Without an expansion phase, the parent stars would be in no danger of merger: no fine-tuning of binary evolution would then be required to construct a plausible formation scenario for tight black-hole binaries. This scenario does, however, require fine-tuning of stellar evolution. But it may be the case that high-mass, low-metallicity stars in close binaries behave exactly as needed for this scenario to work.
 
-Binary companions raise tides on each other, much like the Moon's tides on Earth.  If a binary is tight enough that each star fills a significant fraction of its Roche lobe, tidal energy dissipation is rapid and proceeds until the stars are tidally locked, i.e. the rotation periods of the stars are synchronized to the orbital period of the binary. This also means that the stars are rotating at a few tens of percent of their break-up velocities.  Such rapidly rotating stars will develop significant temperature gradients between the poles and the equator, which may lead to efficient large-scale meridional circulation within each star \citep{Eddington:1925,Sweet:1950}.  \citet{EndalSofia:1978} and subsequent studies \citep[e.g.,][]{Heger:2000,MaederMeynet:2000,Yoon:2006} explored the internal shears and their impact on the mixing of chemical species within the star.  Although quantitative predictions differ, it appears that rapidly rotating massive stars may efficiently transport hydrogen into the core and helium out into the envelope until nearly all of the hydrogen in the star is fused into helium.  Then, at the end of the main sequence, the star behaves essentially as a Wolf-Rayet naked helium star, contracting rather than expanding. As long as the metallicity \ajf{winds?} is sufficiently low to avoid significant binary widening -- which would lead to the loss of co-rotation and chemically homogeneous evolution \citep{deMink:2009} -- the binary can avoid mass transfer.  \citet{MandeldeMink:2016,deMinkMandel:2016}, and \citet{Marchant:2016} explored such binaries and concluded that they could present a viable channel for forming the most massive LIGO sources (such as GW150914), though not the lowest-mass systems.
+Binary companions raise tides on each other, much like the Moon's tides on Earth.  If a binary is tight enough that each star fills a significant fraction of its Roche lobe, tidal energy dissipation is rapid and proceeds until the stars are tidally locked, i.e. the rotation periods of the stars are synchronized to the orbital period of the binary. This also means that the stars are rotating at a few tens of percent of their break-up velocities.  Such rapidly rotating stars will develop significant temperature gradients between the poles and the equator, which may lead to efficient large-scale meridional circulation within each star \citep{Eddington:1925,Sweet:1950}.  \citet{EndalSofia:1978} and subsequent studies \citep[e.g.,][]{Heger:2000,MaederMeynet:2000,Yoon:2006} explored the internal shears and their impact on the mixing of chemical species within the star.  Although quantitative predictions differ, it appears that rapidly rotating massive stars may efficiently transport hydrogen into the core and helium out into the envelope until nearly all of the hydrogen in the star is fused into helium.  Then, at the end of the main sequence, the star behaves essentially as a Wolf-Rayet naked helium star, contracting rather than expanding. As long as the metallicity \ajf{winds?} is sufficiently low to avoid significant binary widening -- which would lead to the loss of co-rotation and chemically homogeneous evolution \citep{deMink:2009} -- the binary can avoid mass transfer.  \citet{MandeldeMink:2016,deMinkMandel:2016}, and \citet{Marchant:2016} explored such binaries and concluded that they could present a viable channel for forming the most massive \ilya{gravitational-wave} sources (such as GW150914), though not the lowest-mass systems.
 
 \subsubsection{The black hole matchmaking club: dynamical formation in dense stellar environments}
 
@@ -314,11 +314,11 @@ Finally, the eccentricity of merging black hole binaries may contain information
 
 \textbf{Compact object masses over time:} Once formed by stellar collapse or supernova, the compact objects in the binaries of interest will have roughly constant masses. The first compact object to form is unlikely to accrete a significant amount of mass from its companion: doubling its mass at the Eddington limit, which corresponds to an equilibrium between gravity and the pressure on infalling material of the radiation released during accretion, would take more than 100 million years; the massive companion will only survive for a small fraction of that time. After formation of the second compact object, there is very little further accretion in the system. The mass of each compact remnant is thus almost equal to its mass at formation. 
 
-\textbf{Compact object masses at formation:} Compact object masses are set by the mass of the parent star at the end of stellar evolution, preceding the collapse or supernova explosion, and by the physics of the collapse itself. \textcolor{red}{--what does it mean to say that the mass is set by the physics?} Observational evidence and collapse models suggest that sufficiently massive stellar cores may completely collapse into black holes \citep[for a review, see][]{Mirabel:2016}.  Thus, the mass of the stellar core -- the convective region in the center of the star where nuclear fusion proceeds from hydrogen through helium, carbon, oxygen, and so on to iron -- determines the ultimate black hole mass.  If left unperturbed, perhaps a third of the mass of a massive star will end up in a carbon--oxygen core, and thereby in the compact object remnant.  Since stars well in excess of 100 $M_\odot$ have been observed in the local Universe \citep[e.g.,][]{Schneider:2018}, perhaps the right question to ask is not why LIGO observed such heavy black holes, but why we haven't observed such heavy \textcolor{red}{(are we generally ok with saying "heavy" throughout as equivalent to "massive"? I probably wouldn't, but if it's standard then ok.)} black holes in X-ray binaries. The answer has to do with the mass loss from massive stars. 
+\textbf{Compact object masses at formation:} Compact object masses are set by the mass of the parent star at the end of stellar evolution, preceding the collapse or supernova explosion, and by the physics of the collapse itself. \textcolor{red}{--what does it mean to say that the mass is set by the physics?} Observational evidence and collapse models suggest that sufficiently massive stellar cores may completely collapse into black holes \citep[for a review, see][]{Mirabel:2016}.  Thus, the mass of the stellar core -- the convective region in the center of the star where nuclear fusion proceeds from hydrogen through helium, carbon, oxygen, and so on to iron -- determines the ultimate black hole mass.  If left unperturbed, perhaps a third of the mass of a massive star will end up in a carbon--oxygen core, and thereby in the compact object remnant.  Since stars well in excess of 100 $M_\odot$ have been observed in the local Universe \citep[e.g.,][]{Schneider:2018}, perhaps the right question to ask is not why LIGO and Virgo observed such heavy black holes, but why we haven't observed such heavy \textcolor{red}{(are we generally ok with saying "heavy" throughout as equivalent to "massive"? I probably wouldn't, but if it's standard then ok.)} black holes in X-ray binaries. The answer has to do with the mass loss from massive stars. 
 
-\textbf{The importance of stellar winds:} The intense radiation from massive stars -- whose luminosities may be a hundred thousand times greater than the Sun -- drives significant winds, which can remove much of the material from the star. The mass of the star at the end of stellar evolution can thus be much lower than the star's initial mass, and the mass of the resulting compact object can therefore be much lower than 1/3 of the initial stellar mass. \textcolor{red}{(adding a sentence or two here to spell out your point!)}   Metals like iron, with their many absorption lines, are particularly efficient at capturing the stellar radiation and transforming it into outward momentum.  Therefore, the metal fraction, or metallicity -- the fraction of the star's mass that's in elements heavier than hydrogen and helium -- is a key ingredient in determining stellar wind mass loss rates \citep{Vink:2001}. Although wind models are uncertain \citep[e.g.,][]{Renzo:2017}, simulations suggest that at the 2\% metallicity of our solar neighborhood, massive stars lose enough mass via winds that maximum black hole masses are only around $15 M_\odot$ \citep{Belczynski:2009,Spera:2015}. This matches the masses of black holes observed in X-ray binaries. Forming heavier black holes, like those observed by LIGO, requires stellar progenitors born in regions with lower metallicity. Figure \ref{fig:BHremnant} illustrates the dependence of compact remnant mass on metallicity. 
+\textbf{The importance of stellar winds:} The intense radiation from massive stars -- whose luminosities may be a hundred thousand times greater than the Sun -- drives significant winds, which can remove much of the material from the star. The mass of the star at the end of stellar evolution can thus be much lower than the star's initial mass, and the mass of the resulting compact object can therefore be much lower than 1/3 of the initial stellar mass. \textcolor{red}{(adding a sentence or two here to spell out your point!)}   Metals like iron, with their many absorption lines, are particularly efficient at capturing the stellar radiation and transforming it into outward momentum.  Therefore, the metal fraction, or metallicity -- the fraction of the star's mass that's in elements heavier than hydrogen and helium -- is a key ingredient in determining stellar wind mass loss rates \citep{Vink:2001}. Although wind models are uncertain \citep[e.g.,][]{Renzo:2017}, simulations suggest that at the 2\% metallicity of our solar neighborhood, massive stars lose enough mass via winds that maximum black hole masses are only around $15 M_\odot$ \citep{Belczynski:2009,Spera:2015}. This matches the masses of black holes observed in X-ray binaries. Forming heavier black holes, like those observed through gravitational waves, requires stellar progenitors born in regions with lower metallicity. Figure \ref{fig:BHremnant} illustrates the dependence of compact remnant mass on metallicity. 
 
-\textbf{Why LIGO sources might come from low-metallicity stars:} Because metals are produced by stars, low-metallicity regions are typically those with fewer preceding stellar generations.  Several plausible scenarios could explain why the LIGO sources came from low-metallicity stars. For the more distant sources, explanations include formation in low-mass metal-poor galaxies, while for relatively local mergers the parent stars could have formed in the very distant past, with a long delay time between star formation and black hole merger \citep{Belczynski:2016}. \textcolor{red}{This issue is discussed in more detail in Section ??? -- which I haven't read in detail yet, so I might have distorted the meaning of this paragraph... sorry!.}
+\textbf{Why gravitational-wave sources might come from low-metallicity stars:} Because metals are produced by stars, low-metallicity regions are typically those with fewer preceding stellar generations.  Several plausible scenarios could explain why the gravitational-wave sources came from low-metallicity stars. For the more distant sources, explanations include formation in low-mass metal-poor galaxies, while for relatively local mergers the parent stars could have formed in the very distant past, with a long delay time between star formation and black hole merger \citep{Belczynski:2016}. \textcolor{red}{This issue is discussed in more detail in Section ??? -- which I haven't read in detail yet, so I might have distorted the meaning of this paragraph... sorry!.}
 
 \begin{figure}
 	\centering
