--- a/Mandel.bib
+++ b/Mandel.bib
@@ -20052,3 +20052,96 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Chatterjee:2017,
+   author = {{Chatterjee}, S. and {Rodriguez}, C.~L. and {Kalogera}, V. and 
+	{Rasio}, F.~A.},
+    title = "{Dynamical Formation of Low-mass Merging Black Hole Binaries like GW151226}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {1609.06689},
+ keywords = {black hole physics, galaxies: star clusters: general, globular clusters: general, gravitational waves, methods: numerical, methods: statistical},
+     year = 2017,
+    month = feb,
+   volume = 836,
+      eid = {L26},
+    pages = {L26},
+      doi = {10.3847/2041-8213/aa5caa},
+   adsurl = {http://adsabs.harvard.edu/abs/2017ApJ...836L..26C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Rodriguez:2018,
+   author = {{Rodriguez}, C.~L. and {Amaro-Seoane}, P. and {Chatterjee}, S. and 
+	{Rasio}, F.~A.},
+    title = "{Post-Newtonian Dynamics in Dense Star Clusters: Highly Eccentric, Highly Spinning, and Repeated Binary Black Hole Mergers}",
+  journal = {Physical Review Letters},
+archivePrefix = "arXiv",
+   eprint = {1712.04937},
+ primaryClass = "astro-ph.HE",
+     year = 2018,
+    month = apr,
+   volume = 120,
+   number = 15,
+      eid = {151101},
+    pages = {151101},
+      doi = {10.1103/PhysRevLett.120.151101},
+   adsurl = {http://adsabs.harvard.edu/abs/2018PhRvL.120o1101R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{TalbotThrane:2017,
+   author = {{Talbot}, C. and {Thrane}, E.},
+    title = "{Determining the population properties of spinning black holes}",
+  journal = {\prd},
+archivePrefix = "arXiv",
+   eprint = {1704.08370},
+ primaryClass = "astro-ph.HE",
+     year = 2017,
+    month = jul,
+   volume = 96,
+   number = 2,
+      eid = {023012},
+    pages = {023012},
+      doi = {10.1103/PhysRevD.96.023012},
+   adsurl = {http://adsabs.harvard.edu/abs/2017PhRvD..96b3012T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Fishbach:2017spin,
+   author = {{Fishbach}, M. and {Holz}, D.~E. and {Farr}, B.},
+    title = "{Are LIGO's Black Holes Made from Smaller Black Holes?}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {1703.06869},
+ primaryClass = "astro-ph.HE",
+ keywords = {binaries: general, gravitational waves, methods: data analysis, stars: black holes, stars: massive},
+     year = 2017,
+    month = may,
+   volume = 840,
+      eid = {L24},
+    pages = {L24},
+      doi = {10.3847/2041-8213/aa7045},
+   adsurl = {http://adsabs.harvard.edu/abs/2017ApJ...840L..24F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Fishbach:2017mass,
+   author = {{Fishbach}, M. and {Holz}, D.~E.},
+    title = "{Where Are LIGO{\rsquo}s Big Black Holes?}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {1709.08584},
+ primaryClass = "astro-ph.HE",
+ keywords = {binaries: general, gravitational waves, methods: data analysis, stars: black holes, stars: massive },
+     year = 2017,
+    month = dec,
+   volume = 851,
+      eid = {L25},
+    pages = {L25},
+      doi = {10.3847/2041-8213/aa9bf6},
+   adsurl = {http://adsabs.harvard.edu/abs/2017ApJ...851L..25F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
