--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -200,8 +200,7 @@ When the detection of GW150914 was first announced, many were surprised that it 
  
 \begin{figure}
 	\centering
-	%\includegraphics[trim={1.3cm 7.0cm 0.0cm 7.9cm},clip,scale=0.45]{evolvedPvseWithOrbit.pdf}
-	\includegraphics[width=0.45\textwidth]{M-rp-log.png}
+	\includegraphics[width=0.4\textwidth]{M-rp-log.png}
 	\caption{Maximum initial periapsis separation that a binary black hole with equal-mass components (as given on the ordinate) can have while still merging within the age of the Universe through gravitational-wave emission, \ilya{for four different choices of initial eccentricity: $e=0$, 0.9, 0.99, and 0.999 from the top down}.\label{fig:periapsis}}
 \end{figure}
 	
@@ -223,30 +222,45 @@ When the detection of GW150914 was first announced, many were surprised that it 
 The first possible channel is perhaps the most studied one, with the first mention coming as early as \citet{Tutukov:1973}.  In this scenario the two stars are born in a relatively wide binary, allowing them space to expand.  However, at a critical moment in its evolution, the binary is tightened by a factor of two or more orders of magnitude through dynamically unstable mass transfer, known as a common envelope phase. The resulting tight binary may then be close enough to merge through gravitational-wave emission. This channel has been studied at length over the past 40 years, with significant contributions from \citet{TutukovYungelson:1993,Lipunov:1997,BetheBrown:1998,Nelemans:2003,VossTauris:2003,Pfahl:2005,Dewi:2006,Kalogera:2007,OShaughnessy:2008,Dominik:2012,Dominik:2014, Belczynski:2016,EldridgeStanway:2016} and many others. Rather than summarizing all of the steps and challenges in our understanding of massive binary evolution (see the papers above and the review by \citet{PostnovYungelson:2014} for details), we provide a schematic outline of an evolutionary scenario that leads to the formation of a GW150914-like merging system.
 
 \ajf{Rework to include numbered steps once new figure is made}
-The evolution of this system is sketched out in an van den Heuvel -- style diagram in \autoref{fig:COMPAS}.  Two massive stars of perhaps $100$ and $75$ solar masses are born in a low-metallicity environment ($\sim 5\%$ of solar metallicity)  binary at a separation of $\sim 10$ AU.  The more massive primary reaches the end of its main sequence first.  At this stage, it has completed fusing hydrogen into helium in its core, and with the loss of energy input, the core begins to contract.  The release of gravitational binding energy and the onset of hydrogen shell burning cause the hydrogen-rich envelope to expand, until the primary expands past the L1 point and overflows its Roche Lobe, beginning to transfer mass onto the secondary.  The mass transfer proceeds on the thermal timescale of the primary donor and is likely significantly non-conservative, as the less evolved secondary, with its correspondingly longer thermal timescale, is unable to accept mass at the rate at which it is being donated.  The loss of mass from the binary further widens the system, to perhaps $\sim 20$ AU.  The primary loses its entire envelope, leaving behind a naked helium-burning star -- a Wolf-Rayet star.  Following wind-driven mass loss, which further widens the system, the primary collapses into a black hole; here, this collapse is assumed to be complete, without an associated natal kick.  When, a few hundred thousand years later, the secondary reaches the end of its main sequence, the process repeats in reverse: the secondary expands until it commences mass transfer onto the primary.  By this time, the primary has lost around two thirds of its initial mass through a combination of envelope stripping, winds, and possible mass loss during a supernova.  Meanwhile, this mass transfer would need to be almost wholly non-conservative if the accretion onto the black hole obeys the Eddington limit.  Consequently, mass transfer would lead to a rapid hardening of the binary at a rate that is faster than the reduction in the size of the secondary donor on mass loss.  As a result, the more mass it donates, the more the donor overflows its Roche lobe.  This runaway process of dynamically unstable mass transfer leads to the formation of a common envelope of gas around the binary out of the donor's envelope; see \citet{Ivanova:2013} for a review.  The drag force on the black hole from the envelope leads to rapid spiral-in.   The dissipated orbital energy is deposited in the envelope, and may ultimately lead to the expulsion of the envelope.  The orbital energy is decreased by an amount necessary to unbind the envelope, and the resulting black hole -- Wolf-Rayet binary has a separation of only $\sim 35 R_\odot$ in this example.  Following further wind-driven mass loss from the secondary and its collapse into a black hole, the black hole binary is formed.  While this entire process takes only a few million years after the formation the binary, the subsequent inspiral through gravitational-wave emission will last for around 10 billion years before merger.
+The evolution of this system is sketched out in an van den Heuvel -- style diagram in \autoref{fig:isol_binary}.  Two massive stars of perhaps $100$ and $75$ solar masses are born in a low-metallicity environment ($\sim 5\%$ of solar metallicity)  binary at a separation of $\sim 10$ AU.  The more massive primary reaches the end of its main sequence first.  At this stage, it has completed fusing hydrogen into helium in its core, and with the loss of energy input, the core begins to contract.  The release of gravitational binding energy and the onset of hydrogen shell burning cause the hydrogen-rich envelope to expand, until the primary expands past the L1 point and overflows its Roche Lobe, beginning to transfer mass onto the secondary.  The mass transfer proceeds on the thermal timescale of the primary donor and is likely significantly non-conservative, as the less evolved secondary, with its correspondingly longer thermal timescale, is unable to accept mass at the rate at which it is being donated.  The loss of mass from the binary further widens the system, to perhaps $\sim 20$ AU.  The primary loses its entire envelope, leaving behind a naked helium-burning star -- a Wolf-Rayet star.  Following wind-driven mass loss, which further widens the system, the primary collapses into a black hole; here, this collapse is assumed to be complete, without an associated natal kick.  When, a few hundred thousand years later, the secondary reaches the end of its main sequence, the process repeats in reverse: the secondary expands until it commences mass transfer onto the primary.  By this time, the primary has lost around two thirds of its initial mass through a combination of envelope stripping, winds, and possible mass loss during a supernova.  Meanwhile, this mass transfer would need to be almost wholly non-conservative if the accretion onto the black hole obeys the Eddington limit.  Consequently, mass transfer would lead to a rapid hardening of the binary at a rate that is faster than the reduction in the size of the secondary donor on mass loss.  As a result, the more mass it donates, the more the donor overflows its Roche lobe.  This runaway process of dynamically unstable mass transfer leads to the formation of a common envelope of gas around the binary out of the donor's envelope; see \citet{Ivanova:2013} for a review.  The drag force on the black hole from the envelope leads to rapid spiral-in.   The dissipated orbital energy is deposited in the envelope, and may ultimately lead to the expulsion of the envelope.  The orbital energy is decreased by an amount necessary to unbind the envelope, and the resulting black hole -- Wolf-Rayet binary has a separation of only $\sim 35 R_\odot$ in this example.  Following further wind-driven mass loss from the secondary and its collapse into a black hole, the black hole binary is formed.  While this entire process takes only a few million years after the formation the binary, the subsequent inspiral through gravitational-wave emission will last for around 10 billion years before merger.
 
 \begin{figure}
 	\centering
-	%\includegraphics[trim={1.3cm 7.0cm 0.0cm 7.9cm},clip,scale=0.45]{evolvedPvseWithOrbit.pdf}
-	\includegraphics[width=0.9\textwidth]{COMPAS.png}
-	\caption{\label{fig:COMPAS} A sketch of the possible evolutionary path of GW150914, following \citet{Stevenson:2017}.  The stars are born in a $Z=0.05 Z_\odot$ low-metallicity environment with an initial separation of $\sim 10$ AU.  The binary widens during non-conservative case B mass transfer from primary to secondary, but is hardened by two orders of magnitude as a result of dynamically unstable mass transfer from the expanding secondary onto the primary which has become a black hole.}
+	\includegraphics[width=0.45\textwidth]{channel1.png}
+	\caption{\label{fig:isol_binary} A sketch of merging black hole binary formation via the isolated binary channel.}
 \end{figure}
 
 Of course, this relatively simple picture holds many uncertainties: the rate of mass loss through winds, particularly during specific stellar evolutionary phases such as the luminous blue variable phase \citep{Mennekens:2014} and its dependence on metallicity; the efficiency of stable mass transfer efficiency; the response of a star to mass loss and the onset of a common envelope phase \citep{Pavlovskii:2017}; common-envelope survival and the amount of binary hardening associated with the envelope ejection; supernova fallback and natal kicks for black holes \citep[e.g.,][]{Repetto:2012,Mandel:2015kicks}; the possible contribution of double-core common envelopes when unstable mass transfer is initiated between two evolved stars; and the role of dynamically stable non-conservative mass transfer onto a lower-mass compact donor in achieving sufficient binary hardening  \citep{vandenHeuvel:2017,Neijssel:2018}.  We will discuss the possibilities of addressing some of these with future gravitational-wave observations in \autoref{prospect}.
 
 \subsubsection{Abracadabra, thou shalt not expand: chemically homogeneous evolution}
 
+\autoref{fig:chem_homog}
+
 What if some types of massive stars did not expand? A massive binary could then start out at an orbital period of a couple of days, close enough that if the stars produced black holes in situ they would merge within the age of the Universe through gravitational-wave emission. Without an expansion phase, the parent stars would be in no danger of merger: no fine-tuning of binary evolution would then be required to construct a plausible formation scenario for tight black-hole binaries. This scenario does, however, require fine-tuning of stellar evolution. But it may be the case that high-mass, low-metallicity stars in close binaries behave exactly as needed for this scenario to work.
 
 Binary companions raise tides on each other, much like the Moon's tides on Earth.  If a binary is tight enough that each star fills a significant fraction of its Roche lobe, tidal energy dissipation is rapid and proceeds until the stars are tidally locked, i.e. the rotation periods of the stars are synchronized to the orbital period of the binary. This also means that the stars are rotating at a few tens of percent of their break-up velocities.  Such rapidly rotating stars will develop significant temperature gradients between the poles and the equator, which may lead to efficient large-scale meridional circulation within each star \citep{Eddington:1925,Sweet:1950}.  \citet{EndalSofia:1978} and subsequent studies \citep[e.g.,][]{Heger:2000,MaederMeynet:2000,Yoon:2006} explored the internal shears and their impact on the mixing of chemical species within the star.  Although quantitative predictions differ, it appears that rapidly rotating massive stars may efficiently transport hydrogen into the core and helium out into the envelope until nearly all of the hydrogen in the star is fused into helium.  Then, at the end of the main sequence, the star behaves essentially as a Wolf-Rayet naked helium star, contracting rather than expanding. As long as the metallicity \ajf{winds?} is sufficiently low to avoid significant binary widening -- which would lead to the loss of co-rotation and chemically homogeneous evolution \citep{deMink:2009} -- the binary can avoid mass transfer.  \citet{MandeldeMink:2016,deMinkMandel:2016}, and \citet{Marchant:2016} explored such binaries and concluded that they could present a viable channel for forming the most massive \ilya{gravitational-wave} sources (such as GW150914), though not the lowest-mass systems.
 
+\begin{figure}
+	\centering
+	\includegraphics[width=0.4\textwidth]{channel2.png}
+	\caption{\label{fig:chem_homog} A sketch of merging black hole binary formation via the chemically homogeneous evolution channel.}
+\end{figure}
+
 \subsubsection{The black hole matchmaking club: dynamical formation in dense stellar environments}
+
+\autoref{fig:dynamical}
 
 The last possibility we will describe is that the merging black holes may not have formed in a binary at all.  Instead they formed from the collapse of independent massive stars, but were then introduced to each other by a matchmaker, or rather a whole array of matchmakers.  Suppose the two black holes formed in a dense stellar environment such as a globular cluster.  As the most massive objects in the cluster, they naturally sink toward the cluster center as energy is equipartitioned throughout the cluster in the process known as mass segregation.  Once there, they may form binaries through three-body interactions, or by substituting into existing binaries: in a $2+1$ interaction, the lightest object is usually ejected in favor of the two heavier objects forming a binary.  Subsequent interactions with other objects in the cluster -- the matchmakers -- will gradually tighten the black-hole binary: the interlopers are likely to leave with  slightly higher velocities than they arrived with, each time removing energy from the binary.   If the density of objects is high enough to ensure a suitable rate of interactions, the binary will be hardened until it is compact enough to merge through gravitational-wave emission (provided it does not get kicked out of the cluster through a recoil kick from the last interaction -- and even then, it may still go on to merge outside of the cluster).  
 
 The prospects for these dynamically formed merging binary black holes in globular clusters have been explored through a series of analytical estimates and numerical experiments by \citet{Sigurdsson:1993,Kulkarni:1993,PZwart:2000,OLeary:2006,Banerjee:2010,Downing:2011,Morscher:2015,Mapelli:2016,Rodriguez:2016} and others.  \citet{OLeary:2008} and \citet{MillerLauburg:2008} have argued that dynamical formation could also take place in galactic nuclei with and without a massive black hole, respectively (but cf.~\citet{Tsang:2013} for the former).  \citet{Bartos:2016} and \citet{Stone:2016} have described the role that an accretion disk in an active galactic nucleus could play in enhancing the rate of binary black hole mergers.
 
 Dynamical formation and isolated binary evolution mechanisms are of course not mutually exclusive; for example, the inner binaries in hierarchical triple systems may evolve as isolated binaries, but may then be brought together more efficiently through Lidov-Kozai oscillations \citep{Lidov:1962,Kozai:1962}; see, e.g., \citet{PeretsKratter:2012,Belczynski:2014VMS}.
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.4\textwidth]{channel3.png}
+	\caption{\label{fig:dynamical} A sketch of merging black hole binary formation via the dynamical evolution channel.}
+\end{figure}
 
 
 \section{Merger rates and properties}\label{merge}
