First paragraph of III B.

--- a/Mandel.bib
+++ b/Mandel.bib
@@ -20144,4 +20144,51 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Dyson:1962,
+   author = {Dyson, Freeman J.},
+    title = "{Gravitational Machines}",
+  journal = {Gravity Research Foundation Essay},
+     year = 1962,
+     url = {https://static1.squarespace.com/static/5852e579be659442a01f27b8/t/5873d777e4fcb5de501305f7/1483986808648/dyson.pdf}
+}
+
+@ARTICLE{vdHDeLoore:1973,
+   author = {{van den Heuvel}, E.~P.~J. and {De Loore}, C.},
+    title = "{The nature of X-ray binaries III. Evolution of massive close binaries with one collapsed component - with a possible application to Cygnus X-3.}",
+  journal = {\aap},
+     year = 1973,
+    month = jun,
+   volume = 25,
+    pages = {387-395},
+   adsurl = {http://adsabs.harvard.edu/abs/1973A%26A....25..387V},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INPROCEEDINGS{Paczynski:1976,
+   author = {{Paczynski}, B.},
+    title = "{Common Envelope Binaries}",
+booktitle = {Structure and Evolution of Close Binary Systems},
+     year = 1976,
+   series = {IAU Symposium},
+   volume = 73,
+   editor = {{Eggleton}, P. and {Mitton}, S. and {Whelan}, J.},
+    pages = {75},
+   adsurl = {http://adsabs.harvard.edu/abs/1976IAUS...73...75P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{SmarrBlandford:1976,
+   author = {{Smarr}, L.~L. and {Blandford}, R.},
+    title = "{The binary pulsar - Physical processes, possible companions, and evolutionary histories}",
+  journal = {\apj},
+ keywords = {Binary Stars, Companion Stars, Neutron Stars, Pulsars, Stellar Evolution, Black Holes (Astronomy), Orbital Elements, Stellar Mass, Stellar Motions, White Dwarf Stars},
+     year = 1976,
+    month = jul,
+   volume = 207,
+    pages = {574-588},
+      doi = {10.1086/154524},
+   adsurl = {http://adsabs.harvard.edu/abs/1976ApJ...207..574S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
