--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -194,7 +194,7 @@ When the detection of GW150914 was first announced, many were surprised that it 
 
 \textbf{But the black holes' parent stars can't get so close.} Stars expand as they evolve. Even our Sun will reach \ilya{roughly} an astronomical unit in size during its giant phase; the stars (above 20 solar masses at birth) that leave behind black holes may reach thousands of solar radii at their maximal extent. Maximum stellar radius as a function of initial mass is plotted in \autoref{fig:Rmax}. We appear to have a problem. If the parent stars begin life at separations from which gravitational waves could bring their remnants together, the stars will expand to sizes larger than their separation as they evolve, and will therefore merge long before they collapse into black holes. If they start sufficiently far apart to avoid merger before collapse, their remnant binaries will take many millions of times the age of the universe to merge. In either case, no gravitational-wave sources would exist today. 
 
-\ilya{\textbf{The problem is there at birth.} In fact, for reasonable models of wind-driven mass loss and mass loss during supernova, even initial stellar radii at the start of the main sequence are too large to fit into a binary that could merge within the age of the Universe just through gravitational-wave emission.  The black 'Roche lobe' curve in \autoref{fig:Rmax} shows the maximum size that a star could have in order to fit into a circular, merging equal-mass binary (see \autoref{fig:periapsis}).  This is smaller than the zero-age main sequence radius, so the problem is there even without accounting for stellar radial expansion or binary widening through mass loss, which would exacerbate the problem.}
+\ilya{\textbf{The problem is already there at birth.} In fact, for reasonable models of wind-driven mass loss and mass loss during supernova, even initial stellar radii at the start of the main sequence are too large to fit into a binary that could merge within the age of the Universe just through gravitational-wave emission.  The black 'Roche lobe' curve in \autoref{fig:Rmax} shows the maximum size that a star could have in order to fit into a circular, merging equal-mass binary (see \autoref{fig:periapsis}).  This is smaller than the zero-age main sequence radius, so the problem is there even without accounting for stellar radial expansion or binary widening through mass loss, which would exacerbate the problem.}
 
 %Because the gravitational-wave merger timescale is inversely proportional to the cube of the masses, double neutron stars must be separated by less than 5 solar radii to merge within the age of the Universe. The stars (\ilya{approximately} 8 to 20 solar masses at birth) that produce neutron stars also expand greatly during their evolution. But even \textit{at birth}, the neutron stars' progenitors could not fit into a binary of the required size.  
  
@@ -212,17 +212,15 @@ When the detection of GW150914 was first announced, many were surprised that it 
 
 %\todo{Update left panel of plot to show periapsis on horizontal axis.  Take max radial extent plot from Simon?}
 
-\textbf{So then why do the \ilya{gravitational-wave} sources exist at all?} Given the above, one might conclude that gravitational-wave driven compact binary mergers do not exist. Yet their existence and detection were expected \ilya{\citep{ratesdoc}}. Three leading formation scenarios have been proposed: (i) finely tuned binary evolution that brings the stars closer only after their major expansion phases have passed; (ii) finely tuned stellar evolution that prevents the parent stars from expanding at all; and (iii) assembly of a close binary from black holes that formed from isolated stars. Contrived as these scenarios sound, all three might plausibly contribute to the production of binary black hole mergers. We explore all three in more detail below. (We won't discuss some of the more exotic proposed mechanisms, such as the fragmentation of a single stellar core into two black holes \citep{Loeb:2016} -- \citet{Woosley:2016,Dai:2017} discuss the problems with this picture -- or non-astrophysical formation scenarios such as primordial black holes of cosmological origin \citep[e.g.,][]{Bird:2016}.)
+\textbf{So then why do the \ilya{gravitational-wave} sources exist at all?} Given the above, one might conclude that gravitational-wave driven compact binary mergers do not exist. Yet their existence and detection were expected \ilya{\citep{ratesdoc}}. \ilya{In fact, \citet{Dyson:1962} conjectured about the existence of merging neutron star binaries even before the first neutron star was observed; \citet{Tutukov:1973} argued that binary compact objects must naturally (albeit  rarely, and at wide separations in their model) form as a result of massive binary evolution; and the Hulse--Taylor binary pulsar demonstrated the existence of binary compact objects that would merge within the age of the Universe.}    Three leading formation scenarios for merging compact-object binaries have been proposed: (i) finely tuned binary evolution that brings the stars closer only after their major expansion phases have passed; (ii) finely tuned stellar evolution that prevents the parent stars from expanding at all; and (iii) assembly of a close binary from black holes that formed from isolated stars. Contrived as these scenarios sound, all three might plausibly contribute to the production of binary black hole mergers. We explore all three in more detail below. (We won't discuss some of the more exotic proposed mechanisms, such as the fragmentation of a single stellar core into two black holes \citep{Loeb:2016} -- \citet{Woosley:2016,Dai:2017} discuss the problems with this picture -- or non-astrophysical formation scenarios such as primordial black holes of cosmological origin \citep[e.g.,][]{Bird:2016}.)
 
 \subsection{The Candidate Formation Scenarios}
 \subsubsection{Bring the stars together after they have expanded: classical isolated binary evolution via the common-envelope phase}
 
-\ajf{I want us to briefly say something about why we have been talking about common envelopes for 40 years -- what motivated that?}
-
-The first possible channel is perhaps the most studied one, with the first mention coming as early as \citet{Tutukov:1973}.  In this scenario the two stars are born in a relatively wide binary, allowing them space to expand.  However, at a critical moment in its evolution, the binary is tightened by a factor of two or more orders of magnitude through dynamically unstable mass transfer, known as a common envelope phase. The resulting tight binary may then be close enough to merge through gravitational-wave emission. This channel has been studied at length over the past 40 years, with significant contributions from \citet{TutukovYungelson:1993,Lipunov:1997,BetheBrown:1998,Nelemans:2003,VossTauris:2003,Pfahl:2005,Dewi:2006,Kalogera:2007,OShaughnessy:2008,Dominik:2012,Dominik:2014, Belczynski:2016,EldridgeStanway:2016} and many others. Rather than summarizing all of the steps and challenges in our understanding of massive binary evolution (see the papers above and the review by \citet{PostnovYungelson:2014} for details), we provide a schematic outline of an evolutionary scenario that leads to the formation of a GW150914-like merging system.
+The first possible channel is perhaps the most studied one, \ilya{placing compact objects in the same framework as other very close binaries, such as cataclysmic variables in which at least one of the stars should have extended beyond the binary's current orbital separation during an earlier stage of its evolution \citep[e.g.,][]{Paczynski:1976}}.  In this scenario the two stars are born in a relatively wide binary, allowing them space to expand.  However, at a critical moment in its evolution, the binary is tightened by a factor of two or more orders of magnitude through dynamically unstable mass transfer, known as a common envelope phase. The resulting tight binary may then be close enough to merge through gravitational-wave emission.  \ilya{\citet{SmarrBlandford:1976} may have been the first to explicitly point to this channel in the context of compact object binary formation when analyzing the evolutionary history of the Hulse--Taylor binary pulsar.} The channel has been studied at length over the past 40 years, with significant contributions from \citet{TutukovYungelson:1993,Lipunov:1997,BetheBrown:1998,Nelemans:2003,VossTauris:2003,Pfahl:2005,Dewi:2006,Kalogera:2007,OShaughnessy:2008,Dominik:2012,Belczynski:2016,EldridgeStanway:2016} and many others. Rather than summarizing all of the steps and challenges in our understanding of massive binary evolution (see the papers above and the review by \citet{PostnovYungelson:2014} for details), we provide a schematic outline of an evolutionary scenario that leads to the formation of a GW150914-like merging system.
 
 \ajf{Rework to include numbered steps once new figure is made}
-The evolution of this system is sketched out in an van den Heuvel -- style diagram in \autoref{fig:isol_binary}.  Two massive stars of perhaps $100$ and $75$ solar masses are born in a low-metallicity environment ($\sim 5\%$ of solar metallicity)  binary at a separation of $\sim 10$ AU.  The more massive primary reaches the end of its main sequence first.  At this stage, it has completed fusing hydrogen into helium in its core, and with the loss of energy input, the core begins to contract.  The release of gravitational binding energy and the onset of hydrogen shell burning cause the hydrogen-rich envelope to expand, until the primary expands past the L1 point and overflows its Roche Lobe, beginning to transfer mass onto the secondary.  The mass transfer proceeds on the thermal timescale of the primary donor and is likely significantly non-conservative, as the less evolved secondary, with its correspondingly longer thermal timescale, is unable to accept mass at the rate at which it is being donated.  The loss of mass from the binary further widens the system, to perhaps $\sim 20$ AU.  The primary loses its entire envelope, leaving behind a naked helium-burning star -- a Wolf-Rayet star.  Following wind-driven mass loss, which further widens the system, the primary collapses into a black hole; here, this collapse is assumed to be complete, without an associated natal kick.  When, a few hundred thousand years later, the secondary reaches the end of its main sequence, the process repeats in reverse: the secondary expands until it commences mass transfer onto the primary.  By this time, the primary has lost around two thirds of its initial mass through a combination of envelope stripping, winds, and possible mass loss during a supernova.  Meanwhile, this mass transfer would need to be almost wholly non-conservative if the accretion onto the black hole obeys the Eddington limit.  Consequently, mass transfer would lead to a rapid hardening of the binary at a rate that is faster than the reduction in the size of the secondary donor on mass loss.  As a result, the more mass it donates, the more the donor overflows its Roche lobe.  This runaway process of dynamically unstable mass transfer leads to the formation of a common envelope of gas around the binary out of the donor's envelope; see \citet{Ivanova:2013} for a review.  The drag force on the black hole from the envelope leads to rapid spiral-in.   The dissipated orbital energy is deposited in the envelope, and may ultimately lead to the expulsion of the envelope.  The orbital energy is decreased by an amount necessary to unbind the envelope, and the resulting black hole -- Wolf-Rayet binary has a separation of only $\sim 35 R_\odot$ in this example.  Following further wind-driven mass loss from the secondary and its collapse into a black hole, the black hole binary is formed.  While this entire process takes only a few million years after the formation the binary, the subsequent inspiral through gravitational-wave emission will last for around 10 billion years before merger.
+The evolution of this system is sketched out in a van den Heuvel -- style diagram in \autoref{fig:isol_binary}.  Two massive stars of perhaps $100$ and $75$ solar masses are born in a low-metallicity environment ($\sim 5\%$ of solar metallicity)  binary at a separation of $\sim 10$ AU.  The more massive primary reaches the end of its main sequence first.  At this stage, it has completed fusing hydrogen into helium in its core, and with the loss of energy input, the core begins to contract.  The release of gravitational binding energy and the onset of hydrogen shell burning cause the hydrogen-rich envelope to expand, until the primary expands past the L1 point and overflows its Roche Lobe, beginning to transfer mass onto the secondary.  The mass transfer proceeds on the thermal timescale of the primary donor and is likely significantly non-conservative, as the less evolved secondary, with its correspondingly longer thermal timescale, is unable to accept mass at the rate at which it is being donated.  The loss of mass from the binary further widens the system, to perhaps $\sim 20$ AU.  The primary loses its entire envelope, leaving behind a naked helium-burning star -- a Wolf-Rayet star.  Following wind-driven mass loss, which further widens the system, the primary collapses into a black hole; here, this collapse is assumed to be complete, without an associated natal kick.  When, a few hundred thousand years later, the secondary reaches the end of its main sequence, the process repeats in reverse: the secondary expands until it commences mass transfer onto the primary.  By this time, the primary has lost around two thirds of its initial mass through a combination of envelope stripping, winds, and possible mass loss during a supernova.  Meanwhile, this mass transfer would need to be almost wholly non-conservative if the accretion onto the black hole obeys the Eddington limit.  Consequently, mass transfer would lead to a rapid hardening of the binary at a rate that is faster than the reduction in the size of the secondary donor on mass loss.  As a result, the more mass it donates, the more the donor overflows its Roche lobe.  This runaway process of dynamically unstable mass transfer leads to the formation of a common envelope of gas around the binary out of the donor's envelope; see \citet{Ivanova:2013} for a review.  The drag force on the black hole from the envelope leads to rapid spiral-in.   The dissipated orbital energy is deposited in the envelope, and may ultimately lead to the expulsion of the envelope.  The orbital energy is decreased by an amount necessary to unbind the envelope, and the resulting black hole -- Wolf-Rayet binary has a separation of only $\sim 35 R_\odot$ in this example.  Following further wind-driven mass loss from the secondary and its collapse into a black hole, the black hole binary is formed.  While this entire process takes only a few million years after the formation the binary, the subsequent inspiral through gravitational-wave emission will last for around 10 billion years before merger.
 
 \begin{figure}
 	\centering
